--- a/SampleApp.RazorPages/Pages/Index.cshtml
+++ b/SampleApp.RazorPages/Pages/Index.cshtml
@@ -11,8 +11,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Dapper.CX Sample App</h1>    
 
     @if (Model.Data.HasCurrentUser)
     {
