--- a/SampleApp.RazorPages/Pages/_ViewImports.cshtml
+++ b/SampleApp.RazorPages/Pages/_ViewImports.cshtml
@@ -3,5 +3,7 @@
 @using SampleApp.RazorPages.Data
 @using Dapper.CX.SqlServer.Services
 @using SampleApp.Data
+@using SampleApp.Models
+@using GridEditor.RazorPages;
 @namespace SampleApp.RazorPages.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
