--- a/SampleApp.RazorPages/Pages/Index.cshtml
+++ b/SampleApp.RazorPages/Pages/Index.cshtml
@@ -29,7 +29,7 @@
             </select>
         </form>
 
-        <form asp-page-handler="SaveWorkspace" method="post" class="form-inline mt-3 mb-3">
+        <form asp-page-handler="SaveWorkspace" method="post" class="form-inline mt-4 mb-4">
             @Html.Hidden("Id", Model.Workspace?.Id ?? 0)
                             
             <label class="mr-2">Workspace Name:</label>
@@ -49,7 +49,7 @@
     var grid = new GridEditor<Item>(this, Xsrf, (item) => item.Id, defaults: new { WorkspaceId = Model.Data?.CurrentUser?.WorkspaceId ?? 0 }); 
 }
 
-<table>
+<table class="table mt-4">
     <tr>
         <th>Item Name</th>
         <th>Description</th>
@@ -60,10 +60,22 @@
     @foreach (var item in Model.AllItems)
     {
         <tr id="@grid.RowId(item)">
-            <td>@grid.TextBox(row => row.Name)</td>
+            <td>@grid.TextBox(row => row.Name, new { @class = "form-control" })</td>
+            <td>@grid.TextBox(row => row.Description, new { @class = "form-control" })</td>
+            <td>@grid.TextBox(row => row.UnitCost, new { @class = "form-control" })</td>
+            <td>@grid.TextBox(row => row.SalePrice, new { @class = "form-control" })</td>
+            <td>@grid.Controls()</td>
         </tr>
     }
+    <tr id="@grid.NewRowId()">
+        <td>@grid.TextBox(row => row.Name, new { @class = "form-control" })</td>
+        <td>@grid.TextBox(row => row.Description, new { @class = "form-control" })</td>
+        <td>@grid.TextBox(row => row.UnitCost, new { @class = "form-control" })</td>
+        <td>@grid.TextBox(row => row.SalePrice, new { @class = "form-control" })</td>
+        <td>@grid.Controls()</td>
+    </tr>
 </table>
+@grid.HandlerForms("SaveItem", "DeleteItem")
 
 
 @section Scripts {
