--- a/SampleApp.RazorPages/Pages/Index.cshtml
+++ b/SampleApp.RazorPages/Pages/Index.cshtml
@@ -21,7 +21,7 @@
 
     @if (Model.Data.HasCurrentUser)
     {
-        <p>user = @(Model.Data.CurrentUser.DisplayName ?? Model.Data.CurrentUser.UserName), local time @(Model.Data.CurrentUser.LocalTime), workspaceId = @(Model.Data.CurrentUser.WorkspaceId ?? 0)</p>
+        <p>user = @(Model.Data.User.DisplayName ?? Model.Data.User.Name), local time @(Model.Data.User.LocalTime), workspaceId = @(Model.Data.User.WorkspaceId ?? 0)</p>
 
         <form asp-page-handler="SetWorkspace" method="post">
             <select name="workspaceId" onchange="this.form.submit()" asp-items="@Model.WorkspaceSelect" class="form-control">
@@ -46,7 +46,7 @@
 }
 
 @{ 
-    var grid = new GridEditor<Item>(this, Xsrf, (item) => item.Id, defaults: new { WorkspaceId = Model.Data?.CurrentUser?.WorkspaceId ?? 0 }); 
+    var grid = new GridEditor<Item>(this, Xsrf, (item) => item.Id, defaults: new { WorkspaceId = Model.Data?.User?.WorkspaceId ?? 0 }); 
 }
 
 <table class="table mt-4">
