renamed IsEnabled -> IsWorkspaceEnabled

--- a/SampleApp.RazorPages/Pages/Index.cshtml
+++ b/SampleApp.RazorPages/Pages/Index.cshtml
@@ -21,7 +21,7 @@
 
     @if (Model.Data.HasUser)
     {
-        if (!Model.Data.User.IsEnabled)
+        if (!Model.Data.User.IsWorkspaceEnabled)
         {
             <p>user is disabled in the workspace</p>
             return;
