a few more sidebar items

--- a/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -31,9 +31,12 @@
         <div class="row">
             <div class="col-lg-3">
                 <ul>
+                    <li>Why Dapper.CX?</li>
                     <li>Startup Configuration</li>
                     <li>User Profile Integration</li>
                     <li>Form Saving</li>
+                    <li>Audit Tracking</li>
+                    <li>Change Tracking</li>
                     <li>Multi-tenancy</li>
                     <li>Select Lists</li>
                     <li>Grid Editor</li>
@@ -52,7 +55,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - SampleApp.RazorPages - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2020 - Adam O'Neil <a href="https://github.com/adamfoneil">GitHub</a>
         </div>
     </footer>
 
