--- a/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -32,14 +32,15 @@
             <div class="col-lg-3">
                 <ul>
                     <li>Why Dapper.CX?</li>
-                    <li>Startup Configuration</li>
+                    <li><a href="/Startup">Startup Configuration</a></li>
                     <li>User Profile Integration</li>
                     <li>Form Saving</li>
                     <li>Audit Tracking</li>
+                    <li>Validation</li>
                     <li>Change Tracking</li>
                     <li>Multi-tenancy</li>
                     <li>Select Lists</li>
-                    <li>Grid Editor</li>
+                    <li>Grid Editor</li>                    
                     <li>Solution Architecture</li>
                     <li>Queries, Dapper.QX</li>
                 </ul>
