added change tracking service ext

--- a/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -32,8 +32,8 @@
             <div class="col-lg-3">
                 <ul>
                     <li>Why Dapper.CX?</li>
-                    <li><a href="/Startup">Startup Configuration</a></li>
-                    <li>User Profile Integration</li>
+                    <li><a href="/Startup">Startup Configuration</a></li>                    
+                    <li>Viewing Records</li>
                     <li>Form Saving</li>
                     <li>Audit Tracking</li>
                     <li>Validation</li>
