started on inline code sample feature

--- a/SampleApp.RazorPages/Pages/Items.cshtml
+++ b/SampleApp.RazorPages/Pages/Items.cshtml
@@ -7,6 +7,9 @@
     <script src="~/js/Items.js" asp-append-version="true"></script>
 } 
 
+<h2>Typical Form CRUD</h2>
+<p>This page demonstrates typical GET and POST behavior for viewing and saving records.</p>
+
 <form method="get">
     <select name="Id" id="gotoItem" asp-items="@Model.ItemSelect" class="form-control">
         <option value="">(select)</option>
