--- a/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Dapper.CX</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/site.css" />    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.1.2/build/styles/github.min.css">
 </head>
 <body>
     <header>
@@ -33,8 +34,7 @@
                 <ul>
                     <li>Why Dapper.CX?</li>
                     <li><a href="/Startup">Startup Configuration</a></li>                    
-                    <li>Viewing Records</li>
-                    <li>Form Saving</li>
+                    <li><a href="/Items">Typical Form CRUD</a></li>
                     <li>Audit Tracking</li>
                     <li>Validation</li>
                     <li>Change Tracking</li>
@@ -49,6 +49,14 @@
             <div class="col-lg-9">
                 <main role="main" class="pb-3">
                     @RenderBody()
+
+                    @{  
+                        var codeSamples = Model as SampleApp.RazorPages.Interfaces.ICodeSample;
+                        if (codeSamples != null)
+                        {
+                            <partial name="~/Pages/Shared/_CodeSamples.cshtml" model="codeSamples"/>
+                        }
+                    }
                 </main>
             </div>
         </div>
@@ -63,6 +71,9 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/code-samples.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.1.2/build/highlight.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.1.2/build/languages/csharp.min.js"></script>    
 
     @RenderSection("Scripts", required: false)
 </body>
