syntax highlight working

--- a/SampleApp.RazorPages/Pages/Shared/_CodeSamples.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_CodeSamples.cshtml
@@ -3,5 +3,5 @@
 @foreach (var sample in Model.Samples)
 {    
     <h3>@sample.Title</h3>
-<pre><code class="code-sample language-csharp" data-url="@sample.Url"></code></pre>
+    <pre><code class="code-sample csharp" data-url="@sample.Url"></code></pre>
 }
