starting on ItemGrid

--- a/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                     <li>Change Tracking</li>
                     <li>Multi-tenancy</li>
                     <li>Select Lists</li>
-                    <li>Grid Editor</li>                    
+                    <li><a href="/ItemGrid">Grid Editor</a></li>                    
                     <li>Solution Architecture</li>
                     <li>Queries, Dapper.QX</li>
                 </ul>
