placeholder for Search page

--- a/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                     <li>Multi-tenancy</li>
                     <li>Select Lists</li>
                     <li><a href="/GridEditor">Grid Editor</a></li>                    
+                    <li>Search Feature</li>
                     <li>Solution Architecture</li>
                     <li>Queries, Dapper.QX</li>
                 </ul>
