removed some comments that were breaking syntax highlighting

--- a/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -33,7 +33,8 @@
             <div class="col-lg-3">
                 <ul>
                     <li>Why Dapper.CX?</li>
-                    <li><a href="/Startup">Startup Configuration</a></li>                    
+                    <li><a href="/Startup">Startup</a></li>                    
+                    <li>Solution Architecture</li>
                     <li><a href="/Items">Typical Form CRUD</a></li>
                     <li>Audit Tracking</li>
                     <li>Validation</li>
@@ -41,8 +42,7 @@
                     <li>Multi-tenancy</li>
                     <li>Select Lists</li>
                     <li><a href="/GridEditor">Grid Editor</a></li>                    
-                    <li>Search Feature</li>
-                    <li>Solution Architecture</li>
+                    <li>Search Feature</li>                    
                     <li>Queries, Dapper.QX</li>
                 </ul>
             </div>
