--- a/SampleApp.RazorPages/Pages/Startup.cshtml
+++ b/SampleApp.RazorPages/Pages/Startup.cshtml
@@ -1,4 +1,9 @@
 ﻿@page
 @model SampleApp.RazorPages.Pages.StartupModel
-@{
-}
+
+<h2>Startup</h2>
+
+<p>I have a decent <a href="https://github.com/adamfoneil/Dapper.CX/wiki/Using-Dapper.CX-with-Dependency-Injection">wiki topic</a> on how to setup Dapper.CX at startup,
+    that I don't simply want to repeat here.</p>
+
+<p>Still, I can </p>
