--- a/SampleApp.RazorPages/Pages/Items.cshtml
+++ b/SampleApp.RazorPages/Pages/Items.cshtml
@@ -11,9 +11,14 @@
 <p>This page demonstrates typical GET and POST behavior for viewing and saving records.</p>
 
 <form method="get">
-    <select name="Id" id="gotoItem" asp-items="@Model.ItemSelect" class="form-control">
-        <option value="">(select)</option>
-    </select>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">View Item:</label>
+        <div class="col-sm-10">
+            <select name="Id" id="gotoItem" asp-items="@Model.ItemSelect" class="form-control">
+                <option value="">(select)</option>
+            </select>
+        </div>
+    </div>        
 </form>
 
 @if (Model.Item == null)
