--- a/SampleApp.RazorPages/Pages/_ViewImports.cshtml
+++ b/SampleApp.RazorPages/Pages/_ViewImports.cshtml
@@ -4,6 +4,6 @@
 @using Dapper.CX.SqlServer.Services
 @using SampleApp.Data
 @using SampleApp.Models
-@using GridEditor.RazorPages;
+@using GridEditor.RazorPages
 @namespace SampleApp.RazorPages.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
