--- a/SampleApp.RazorPages/wwwroot/css/site.css
+++ b/SampleApp.RazorPages/wwwroot/css/site.css
@@ -69,3 +69,8 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+
+.highlight {
+    background-color: gold
+}
