--- a/SampleApp.RazorPages/Pages/Shared/_CodeSamples.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_CodeSamples.cshtml
@@ -15,7 +15,7 @@
                 <div id="@sample.ImportElementId-target"></div>
             }            
             <pre><code class="code-sample @sample.Language" data-url="@sample.Url" data-import-element="@sample.ImportElementId"></code></pre>
-            <p>View online: <a href="@sample.Url" class="btn btn-sm btn-outline-info">@sample.GetFilename()</a></p>
+            <p>View online: <a href="@sample.GetFullUrl()" class="btn btn-sm btn-outline-info">@sample.GetFilename()</a></p>
         </div>
     </div>        
 }
