progress on tooltips, but not working

--- a/SampleApp.RazorPages/Pages/GridEditor.cshtml
+++ b/SampleApp.RazorPages/Pages/GridEditor.cshtml
@@ -48,3 +48,15 @@
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/gh/adamosoftware/GridEditor.RazorPages@1.0.3/js/GridEditor.min.js"></script>
 }
+
+<div id="SaveItem" class="hidden">
+    <p>The name &quot;OnPostSaveItemAsync&quot; comes from the <code>saveHandler</code> name used in the <code>grid.HandlerForms</code> method call.</p>
+</div>
+
+<div id="DeleteItem" class="hidden">
+    <p>The name &quot;OnPostDeleteItemAsync&quot; comes from the <code>deleteHandler</code> name used in the <code>grid.HandlerForms</code> method call.</p>
+</div>
+
+<div id="HandlerForms" class="hidden">
+    <p>This tells the <code>GridEditor</code> what handlers on the backend perform save and delete actions, respectively.</p>
+</div>
