--- a/SampleApp.RazorPages/wwwroot/css/site.css
+++ b/SampleApp.RazorPages/wwwroot/css/site.css
@@ -70,7 +70,14 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
+.hidden {
+    display:none
+}
 
-.highlight {
+.tooltip {
     background-color: gold
+}
+
+.local-link {
+    background-color:#82f7b3
 }
