--- a/SampleApp.RazorPages/Pages/GridEditor.cshtml
+++ b/SampleApp.RazorPages/Pages/GridEditor.cshtml
@@ -58,5 +58,10 @@
 </div>
 
 <div id="HandlerForms" class="hidden">
-    <p>This tells the <code>GridEditor</code> what handlers on the backend perform save and delete actions, respectively.</p>
+    <p>This tells the <code>GridEditor</code> what handlers on the backend perform save and delete actions, respectively. You'll see them
+    correspond to actions <code>OnPostSaveItemAsync</code> and <code>OnPostDeleteItemAsync</code> in the backend code.</p>
+</div>
+
+<div id="AllItemsQuery">
+    <p>Provides the items to list in the grid itself.</p>
 </div>
