--- a/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
+++ b/SampleApp.RazorPages/Pages/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Dapper.CX</title>
+    <script src="https://kit.fontawesome.com/65a8eeda1a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@10.1.2/build/styles/github.min.css">
@@ -42,7 +43,7 @@
                     <li>Audit Tracking</li>
                     <li>Validation</li>
                     <li>Change Tracking</li>
-                    <li>Multi-tenancy</li>
+                    <li><a href="/MultiTenancy">Multi-tenancy</a></li>
                     <li>Select Lists</li>
                     <li><a href="/GridEditor">Grid Editor</a></li>                    
                     <li>Search Feature</li>                    
